Tidy up and add some new features